--- a/WindowsGame3/SaturnIV.csproj
+++ b/WindowsGame3/SaturnIV.csproj
@@ -119,7 +119,9 @@
     </Compile>
     <Compile Include="ThrusterClass.cs" />
     <Compile Include="VertexPositionNormal.cs" />
-    <Compile Include="WeaponsManager.cs" />
+    <Compile Include="..\..\..\..\..\WeaponsManager.cs">
+      <Link>WeaponsManager.cs</Link>
+    </Compile>
     <Compile Include="HelperClass.cs" />
     <Compile Include="NPCManager.cs" />
     <Compile Include="ModelManager.cs" />
@@ -127,7 +129,7 @@
     <Compile Include="PlayerManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="shipTypes.cs" />
+    <Compile Include="constructs.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
