--- a/WindowsGame3/SaturnIV.csproj
+++ b/WindowsGame3/SaturnIV.csproj
@@ -94,7 +94,7 @@
     <Compile Include="boundingspheredraw.cs" />
     <Compile Include="CameraClass.cs" />
     <Compile Include="boundingFrustumRender.cs" />
-    <Compile Include="AIClass.cs" />
+    <Compile Include="BoidClass.cs" />
     <Compile Include="Network\ClientClass.cs" />
     <Compile Include="Network\ServerClass.cs" />
     <Compile Include="ParticleSystem\SparkParticleSystem.cs" />
