--- a/SaturnIV/SaturnIV.csproj
+++ b/SaturnIV/SaturnIV.csproj
@@ -132,6 +132,7 @@
     <Compile Include="HelperClasses\RenderStarfield.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="PrimitiveClasses\TriangleRender.cs" />
     <Compile Include="SkySphere.cs">
       <SubType>Code</SubType>
     </Compile>
