--- a/SaturnIV/SaturnIV.csproj
+++ b/SaturnIV/SaturnIV.csproj
@@ -144,6 +144,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="SystemClass.cs" />
+    <Compile Include="SystemMapClass.cs" />
     <Compile Include="ThrusterClass.cs" />
     <Compile Include="HelperClasses\HelperClass.cs" />
     <Compile Include="ManagerClasses\NPCManager.cs" />
